--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/check_lbl"
-        android:visibility="invisible"
         />
     <TextView
+        android:id="@+id/text_quest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/msg_quest"
